--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "mongoose": "^5.2.1",
+    "rehive": "^1.17.0",
     "request": "^2.87.0"
   }
 }
