--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/happyx94/face-auth#readme",
   "dependencies": {
+    "child-process": "^1.0.2",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "mongoose": "^5.2.1",
