--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
   },
   "homepage": "https://github.com/happyx94/face-auth#readme",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "child-process": "^1.0.2",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "mongoose": "^5.2.1",
+    "multer": "^1.3.1",
     "rehive": "^1.17.0",
     "request": "^2.87.0"
   }
